--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,12 @@ packages = ["ant_v0"]
 [project]
 name = "ant_v0"
 version = "0.0.1"
-dependencies = ["gymnasium", "pygame>=2.1.3", "pre-commit"]
+dependencies = [
+    "gymnasium",     # should include dependencies for gymnasium["mujoco"]
+    "pygame>=2.1.3",
+    "mujoco>=3.2.7",
+    "numpy>=1.26.3",
+    "pre-commit",
+]
+
+# Currently tested using torch 2.5.1+cu124
